--- a/englishuntcampus.html
+++ b/englishuntcampus.html
@@ -35,9 +35,9 @@ Now you are currently outside the main library. On to your right, you can see an
 <br/><br/>
  What are the objectives of this association ?
 	<br/><br/>
-	<input type="radio" name ="ques3c" value="3rep1c" checked> welcome foreign students
-	<input type="radio" name ="ques3c" value="3rep2c" > inform foreign students
-	<input type="radio" name ="ques3c" value="3rep3c" > help foreign students to integrate
+	<input type="checkbox" name ="ques3c" value="3rep1c" checked> welcome foreign students
+	<input type="checkbox" name ="ques3c" value="3rep2c" > inform foreign students
+	<input type="checkbox" name ="ques3c" value="3rep3c" > help foreign students to integrate
 
 	<br/><br/>
 	  <audio
