--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -18,14 +18,14 @@
 <br/>
 	  <audio
         controls
-        src="mslibrairie.mp3">
+        src="garelibrairie.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
 <br/>	
 	  <audio
         controls
-        src="voguys.mp3">
+        src="librairieguys.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
@@ -51,7 +51,7 @@
         src="placetheatre.mp3">
             Your browser does not support the
             <code>audio</code> element.
-    </audio> 
+    
 <br/>
 
   <audio
@@ -61,6 +61,13 @@
             <code>audio</code> element.
     </audio> 
 <br/>
+	  </audio> 
+	 <audio
+        controls
+        src="Bousreopera.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> 
   <audio
         controls
         src="fontainebourse.mp3">
