--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -22,14 +22,22 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>	
+<br/><br/>
+<form>  In how many languages can we find the book « Le Petit Prince » ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> around 15 languages	
+	<input type="radio" name ="ques3c" value="3rep2c" >around 40 languages
+	<input type="radio" name ="ques3c" value="3rep3c" > around 80 languages
+	<br/><br/>
+	
 	  <audio
         controls
         src="librairieguys.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>	
+<br/><br/>
+<form>  No question here, just enjoy a nice burger !?<br/>
+	<br/>	
 	
 	  <audio
         controls
@@ -37,7 +45,12 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>	
+<br/>	<br/>
+<form> What is the price for a student ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> 7.20 €
+	<input type="radio" name ="ques3c" value="3rep2c" > 8.20€
+	<input type="radio" name ="ques3c" value="3rep3c" >12.10€
+	<br/><br/>
 
   <audio
         controls
@@ -45,14 +58,21 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>
+<br/><br/>
+<form>  What can you notice at the top of the facade, above the clock ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> a lion	
+	<input type="radio" name ="ques3c" value="3rep2c" >a sun 
+	<input type="radio" name ="ques3c" value="3rep3c" > a face
+	<br/><br/>
   <audio
         controls
         src="placetheatre.mp3">
             Your browser does not support the
             <code>audio</code> element.
     
-<br/>
+<br/><br/>
+<form>  Simply admire the beauty of this fountain !<br/>
+	
 
   <audio
         controls
@@ -60,7 +80,13 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>
+<br/><br/>
+<form>  What kind of event take place here ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked>market (books, flowers…)
+	<input type="radio" name ="ques3c" value="3rep2c" >dance night	
+	<input type="radio" name ="ques3c" value="3rep3c" >open-air theater
+	<br/><br/>
+	
 	  </audio> 
 	 <audio
         controls
@@ -68,20 +94,36 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
+	<br/>
+<form>  What can we see on the main doors of the opera ?<br/>
+	<input type="checkbox" name ="ques3c" value="3rep1c" checked> suns	
+	<input type="checkbox" name ="ques3c" value="3rep2c" > musical instruments	
+	<input type="checkbox" name ="ques3c" value="3rep3c" > theater masks
+	<br/><br/>
+	
   <audio
         controls
         src="fontainebourse.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>	
+	
+<br/>	<br/>
+<form>  Enjoy the serenity of this place !
+	
+	<br/><br/>
 	  <audio
         controls
         src="Bourseopera.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>
+<br/><br/>
+<form>  Which flavor doesn’t exist ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> cherry 
+	<input type="radio" name ="ques3c" value="3rep2c" > praline 
+	<input type="radio" name ="ques3c" value="3rep3c" > coconut
+	<br/><br/>
 
 <br/>
 	  <audio
@@ -90,20 +132,31 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>	
+<br/>	<br/>
+<form>  What are the opening hours of the BU on the Friday ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> 8h-20h
+	<input type="radio" name ="ques3c" value="3rep2c" > 8h-19h
+	<input type="radio" name ="ques3c" value="3rep3c" > 9h-21h
+	<br/><br/>
 	  <audio
         controls
         src="museemerv.mp3">
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>	
+<br/>	<br/>
+<form>  When is the happy hour ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Monday to Friday  16h 20h
+	<input type="radio" name ="ques3c" value="3rep2c" >  Friday to Saturday 18h 21h	
+	<input type="radio" name ="ques3c" value="3rep3c" > Wednesday to Sunday 16h 20h
+	<br/><br/>
 	  <audio
         controls
         src="mervcathe.mp3">
             Your browser does not support the
             <code>audio</code> element.
-    </audio> 
+    </audio> <br/>
+
 <br/>	
 <footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
