--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -71,7 +71,7 @@
             <code>audio</code> element.
     
 <br/><br/>
-<form>  Simply admire the beauty of this fountain !<br/>
+
 	
 
   <audio
@@ -80,13 +80,9 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/><br/>
-<form>  What kind of event take place here ?<br/>
-	<input type="radio" name ="ques3c" value="3rep1c" checked>market (books, flowers…)
-	<input type="radio" name ="ques3c" value="3rep2c" >dance night	
-	<input type="radio" name ="ques3c" value="3rep3c" >open-air theater
-	<br/><br/>
-	
+	  
+<br/><br/><form>  Simply admire the beauty of this fountain !<br/>
+
 
 	<br/>
 <form>  What can we see on the main doors of the opera ?<br/>
