--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -70,7 +70,12 @@
             Your browser does not support the
             <code>audio</code> element.
     
-<br/><br/>
+<br/><br/><form>  What can you notice at the top of the facade, above the clock ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> a lion	
+	<input type="radio" name ="ques3c" value="3rep2c" >a sun 
+	<input type="radio" name ="ques3c" value="3rep3c" > a face
+	<br/><br/>
+	
 
 	
 
