--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -36,7 +36,7 @@
             <code>audio</code> element.
     </audio> 
 <br/><br/>
-<form>  No question here, just enjoy a nice burger !?<br/>
+<form>  No question here, just enjoy a nice burger !<br/>
 	<br/>	
 	
 	  <audio
@@ -59,11 +59,7 @@
             <code>audio</code> element.
     </audio> 
 <br/><br/>
-<form>  What can you notice at the top of the facade, above the clock ?<br/>
-	<input type="radio" name ="ques3c" value="3rep1c" checked> a lion	
-	<input type="radio" name ="ques3c" value="3rep2c" >a sun 
-	<input type="radio" name ="ques3c" value="3rep3c" > a face
-	<br/><br/>
+
   <audio
         controls
         src="placetheatre.mp3">
@@ -77,8 +73,6 @@
 	<br/><br/>
 	
 
-	
-
   <audio
         controls
         src="theatrefontaine.mp3">
@@ -89,12 +83,6 @@
 <br/><br/><form>  Simply admire the beauty of this fountain !<br/>
 
 
-	<br/>
-<form>  What can we see on the main doors of the opera ?<br/>
-	<input type="checkbox" name ="ques3c" value="3rep1c" checked> suns	
-	<input type="checkbox" name ="ques3c" value="3rep2c" > musical instruments	
-	<input type="checkbox" name ="ques3c" value="3rep3c" > theater masks
-	<br/><br/>
 	
   <audio
         controls
@@ -103,8 +91,12 @@
             <code>audio</code> element.
     </audio> 
 	
-<br/>	<br/>
-<form>  Enjoy the serenity of this place !
+<br/>	<br/><form>  What kind of event take place here ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> market (books, flowers…)
+	<input type="radio" name ="ques3c" value="3rep2c" > dance night	
+	<input type="radio" name ="ques3c" value="3rep3c" > open-air theater
+	<br/><br/>
+
 	
 	<br/><br/>
 	  <audio
@@ -114,10 +106,10 @@
             <code>audio</code> element.
     </audio> 
 <br/><br/>
-<form>  Which flavor doesn’t exist ?<br/>
-	<input type="radio" name ="ques3c" value="3rep1c" checked> cherry 
-	<input type="radio" name ="ques3c" value="3rep2c" > praline 
-	<input type="radio" name ="ques3c" value="3rep3c" > coconut
+<form> What can we see on the main doors of the opera ?br/>
+	<input type="checkbox" name ="ques3c" value="3rep1c" checked>  suns	
+	<input type="checkbox" name ="ques3c" value="3rep2c" >musical instruments	 
+	<input type="checkbox" name ="ques3c" value="3rep3c" > theater masks
 	<br/><br/>
 
 <br/>
@@ -127,12 +119,7 @@
             Your browser does not support the
             <code>audio</code> element.
     </audio> 
-<br/>	<br/>
-<form>  What are the opening hours of the BU on the Friday ?<br/>
-	<input type="radio" name ="ques3c" value="3rep1c" checked> 8h-20h
-	<input type="radio" name ="ques3c" value="3rep2c" > 8h-19h
-	<input type="radio" name ="ques3c" value="3rep3c" > 9h-21h
-	<br/><br/>
+
 	  <audio
         controls
         src="museemerv.mp3">
