--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -106,7 +106,7 @@
             <code>audio</code> element.
     </audio> 
 <br/><br/>
-<form> What can we see on the main doors of the opera ?br/>
+<form> What can we see on the main doors of the opera ?<br/>
 	<input type="checkbox" name ="ques3c" value="3rep1c" checked>  suns	
 	<input type="checkbox" name ="ques3c" value="3rep2c" >musical instruments	 
 	<input type="checkbox" name ="ques3c" value="3rep3c" > theater masks
@@ -118,14 +118,18 @@
         src="opecathe.mp3">
             Your browser does not support the
             <code>audio</code> element.
-    </audio>  <br/>
+    </audio>  <br/> enjoy the serenity of this place <br/> <br/> 
 	  <audio
         controls
         src="cathedralemusee.mp3">
             Your browser does not support the
             <code>audio</code> element.
-    </audio> 
-
+    </audio> <br/> <br/> 
+<form> what was this building before becoming a museum<br/>
+	<input type="checkbox" name ="ques3c" value="3rep1c" checked> Hopital
+	<input type="checkbox" name ="ques3c" value="3rep2c" >musical School	 
+	<input type="checkbox" name ="ques3c" value="3rep3c" > Market <br/> <br/> 
+	
 	  <audio
         controls
         src="museemerv.mp3">
@@ -133,17 +137,24 @@
             <code>audio</code> element.
     </audio> 
 <br/>	<br/>
-<form>  When is the happy hour ?<br/>
+<form> Which flavor doesn’t exist ?<br/>
+	<input type="radio" name ="ques3c" value="3rep1c" checked> Cherry
+	<input type="radio" name ="ques3c" value="3rep2c" >  Praline	
+	<input type="radio" name ="ques3c" value="3rep3c" > Coconut
+	<br/><br/>
+	  <audio
+        controls
+        src="mervqueen.mp3">
+            Your browser does not support the
+            <code>audio</code> element.
+    </audio> <br/>
+	<form>  When is the happy hour ?<br/>
 	<input type="radio" name ="ques3c" value="3rep1c" checked> Monday to Friday  16h 20h
 	<input type="radio" name ="ques3c" value="3rep2c" >  Friday to Saturday 18h 21h	
 	<input type="radio" name ="ques3c" value="3rep3c" > Wednesday to Sunday 16h 20h
 	<br/><br/>
-	  <audio
-        controls
-        src="mervcathe.mp3">
-            Your browser does not support the
-            <code>audio</code> element.
-    </audio> <br/>
+	<input type="submit" value="submit">
+	</form>
 
 <br/>	
 <footer> Contact : englishhunt2019@gmail.com </footer>
