--- a/englishuntlille.html
+++ b/englishuntlille.html
@@ -65,6 +65,7 @@
         src="placetheatre.mp3">
             Your browser does not support the
             <code>audio</code> element.
+	   </audio> 
     
 <br/><br/><form>  What can you notice at the top of the facade, above the clock ?<br/>
 	<input type="radio" name ="ques3c" value="3rep1c" checked> a lion	
