--- a/englishuntdest.html
+++ b/englishuntdest.html
@@ -6,9 +6,30 @@
 </head>
 <body>
 <a href="englishuntmp.html">Home</a>
-<h1>Welcome to the description page </h1>
-About us :
-<p>Gains : oral, be familiar with places, etc...
+
+<p>Description:</p>
+<p>Students, for those who still haven&rsquo;t fully discovered the campus or Lille, could roam around one of these two locations by discovering our website which provides you instructions via an audio guide. This is your chance to improve your English level and become a &lsquo;Lillois&rsquo;.</p>
+<p>&nbsp;</p>
+<p>This game is for you if you are someone who loves to move around and discover new places!</p>
+<p>&nbsp;</p>
+<p>Each individual or each team will have to first select your location (either campus or Lille centre). Next, you will have to complete certain missions at different places (via the help of the audio guide on the website). To prove your presence at the different locations, you will have to take a photo of yourself/yourselves taken at the respective place and upload it on the website. In addition, there will be a question to answer too.</p>
+<p>&nbsp;</p>
+<p>Those who complete all the missions will become a winner!</p>
+<p>&nbsp;</p>
+<p>Target audience: minimum B1 level required.</p>
+<p>Multiple intelligence: spacious, visual, collaboration and teamwork</p>
+<p>&nbsp;</p>
+<p>Linguistic aims/skills: Oral comprehension, sense of direction, collaboration work, and social interaction</p>
+<p>&nbsp;</p>
+<p>How to use:</p>
+<p>Step 1 &ndash; You will need to go to the website</p>
+<p>Step 2 &ndash; On the homepage, you will find an introduction to English Hunt.</p>
+<p>Step 3 &ndash; Read the rules and regulations</p>
+<p>Step 4 &ndash;select the respective location (&lsquo;Campus&rsquo; or &lsquo;Lille&rsquo;)</p>
+<p>Step 5 &ndash; Click on and listen to the audio guide</p>
+<p>Step 6 &ndash; Once you have visited the given places, accordingly, answer the question or upload photo of yourself to the website</p>
+<p>Step 7 &ndash; once all the missions are completed, you will become the winner!</p>
+<p>[ for our info : and a banner pops up saying " Lille has no more secrets for you" ]</p>
 <footer> Contact : englishhunt2019@gmail.com </footer>
 </boddy>
 </html>
